# awesomecarcreator

./: .editorconfig  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakeSettings.json  README.md  awesomecarcreator.cpp  awesomecarcreator.hpp  helper.cpp  helper.hpp  image_utils.py  main.py  requirements.txt  sh.exe.stackdump  utility.cpp  utility.hpp
resources/: template.json
